--- a/index.html
+++ b/index.html
@@ -9,29 +9,36 @@
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
 <body>
-    <div id="topbar">
-        <div>
-            <b style="font-weight:bold;">Cookie Clicker CLONE </b>
+    <div id="wrapper"> <!-- Basically a div to parent the whole page -->
+        <div id="topbar">
+            <div>
+                <b style="font-weight:bold;">Cookie Clicker CLONE </b>
+            </div>
+            <div>
+            </div>
         </div>
-        <div>
-            <b>Bruno Geraldi Weber - Cookie Clicker from Scratch</b>
-        </div>
-    </div>
-    <div id="game">
-        <div id="left_bar">
-            <h1>Bakery's Name</h1>
-            <h1>Cookie number</h1>
-            <h3>Cookies per second</h3>
-        </div>
-        <div id="middle_bar">
-            <div>Buttons/news</div>
-            <div>Items</div>
-        </div>
-        <div id="right_bar">
-            <div>Store</div>
-            <div>Upgrades</div>
-            <div>buy and sell quantities</div>
-            <div>Purchases</div>
+        <div id="game">
+            <div id="left_bar">
+                <h1>Bakery's Name</h1>
+                <h1>Cookie number</h1>
+                <h3>Cookies per second</h3>
+            </div>
+            <div>
+                <img src="img\panelVertical.png">
+            </div>
+            <div id="middle_bar">
+                <div>Buttons/news</div>
+                <div>Items</div>
+            </div>
+            <div>
+                <img src="img\panelVertical.png">
+            </div>
+                <div id="right_bar">
+                <div>Store</div>
+                <div>Upgrades</div>
+                <div>buy and sell quantities</div>
+                <div>Purchases</div>
+            </div>
         </div>
     </div>
 </body>
