--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <b style="font-weight:bold;">Cookie Clicker CLONE </b>
             </div>
             <div>
+                <b>Bruno Geraldi Weber - Cookie Clicker from Scratch</b>
             </div>
         </div>
         <div id="game">
