--- a/index.html
+++ b/index.html
@@ -15,23 +15,35 @@
                 <b style="font-weight:bold;">Cookie Clicker CLONE </b>
             </div>
             <div>
-                <b>Bruno Geraldi Weber - Cookie Clicker from Scratch</b>
+                <b>Authors: Bruno Geraldi Weber - Henrique Liba</b>
+            </div>
+            <div>
+                <b>Cookie Clicker from Scratch</b>
             </div>
         </div>
         <div id="game">
-            <div id="left_bar">
-                <h1>Bakery's Name</h1>
-                <h1>Cookie number</h1>
-                <h3>Cookies per second</h3>
+            <div id="left_bar" style="background-color: rgba(255, 228, 196, 0.164);">
+                <div>
+                <h2>Bakery's Name</h1>
+                </div>
+                <div>
+                <h1 id="cookie_balance">0 Cookies</h1>
+                </div>
+                <div>
+                <h3 id="cookie_persec">per second: 0</h3>
+                </div>
+                <div id="big_cookie">
+                <button  class="big_cookie_button" onclick=""></button>
+                </div>
             </div>
-            <div>
+            <div id="vertical_panel_left">
                 <img src="img\panelVertical.png">
             </div>
             <div id="middle_bar">
                 <div>Buttons/news</div>
                 <div>Items</div>
             </div>
-            <div>
+            <div id="vertical_panel_right">
                 <img src="img\panelVertical.png">
             </div>
                 <div id="right_bar">
