Readme and css adjusts.

--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
                     <button  class="big_cookie_button" onclick="bake_cookie()"></button>
                     </div>
                 </div>
-                <div id="vertical_panel_left">
-                    <img src="img\panelVertical.png">
+                <div id ="wood_separators" class="vertical_panel_left">
                 </div>
                 <div id="middle_panel">
                     <div>Buttons/news</div>
                     <div>Items</div>
                 </div>
-                <div id="vertical_panel_right">
-                    <img src="img\panelVertical.png">
+                <div id ="wood_separators" class="vertical_panel_right">
                 </div>
                 <div id="right_panel">
                     <div>Store</div>
