--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div id="wrapper"> <!-- Basically a div to parent the whole page -->
-            <div id="topbar">
+            <div id="topbar"> <!-- Top Bar with credits -->
                 <div>
                     <b style="font-weight:bold;">Cookie Clicker CLONE</b>
                 </div>
@@ -21,7 +21,7 @@
                     <b>Cookie Clicker from scratch</b>
                 </div>
             </div>
-            <div id="game">
+            <div id="game"> <!-- The game itself, everything bellow the top bar -->
                 <div id="left_panel">
                     <div>
                     <h2>Bakery's Name</h1>
