Updated building img

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                     <h2>Bakery's Name</h1>
                     </div>
                     <div id="cookie_numbers">
-                        <div>
-                        <h1 id="cookie_balance">0 Cookies</h1>
+                        <div id="cookie_balance">
+                            0 cookies
                         </div>
-                        <div>
-                        <h3 id="cookie_persec">per second: 0</h3>
+                        <div id="cookie_persec">
+                            per second: 0
                         </div>
                     </div>
                     <div id="cookie_anchor">
-                        <div id="shine_right"></div>
-                        <div id="shine_left"></div>
+                        <div id="shine"></div>
+                        <div id="shine" style="animation-direction: reverse"></div>
                         <div id="big_cookie"> <!-- We put 2 divs for the cookie simply because of the wobbliness-->
                         <button id="big_cookie_button" onclick="bake_cookie()"></button>
                         </div>
@@ -59,11 +59,12 @@
                 </div>
                 <div id="wood_separators" class="vertical_panel_right" style="right: 317px"></div>
                 <div id="right_panel">
-
                     <div id="store">
                         <div id="store_title">Store</div>
                         <div id="upgrades"></div>
-                        <div id="products"></div>
+                        <div id="products">
+                            <div id="cursor"></div>
+                        </div>
                     </div>
                 </div>
             </div>
