--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     </head>
     <body>
-        <div id="wrapper"> <!-- div to parent the whole page -->
+       <div id="wrapper"> <!-- div to parent the whole page -->
             <div id="topbar"> <!-- Top Bar with credits -->
                 <div>
                     <b style="font-weight:bold;">Cookie Clicker CLONE</b>
@@ -26,7 +26,7 @@
                     <div id="bottom_gradient"></div>
                     <div id="bottom_filler"></div>
                     <div>
-                   <h2>Bakery's Name</h1>
+                        Cute Bakery's Name
                     </div>
                     <div id="cookie_numbers">
                         <div id="cookie_balance">
@@ -64,64 +64,7 @@
                         <div id="upgrades"></div>
                         <div id="products">
                             <div id="buttom" class="cursor">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
-                            </div>
-                            <div id="buttom">
-
+                                <div id="cursor"></div>
                             </div>
                         </div>
                     </div>
